# Projekt_Rotordynamics

./: README.md  pyproject.toml
src/: GyroscopicRotor.mlx
src/Jim/: Discs_Gyroscopic_edited.py
src/Kim-ly/: 3D_version.py  3D_version_corrected.py  BeamWithDiscs.py  Discs_Gyroscopic.py  FinalVersion_noDiscs.py
